--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
   "private": true,
   "homepage": "",
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@tabler/icons-react": "^2.40.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.5.1",
-    "axios": "^1.7.8",
-    "file-saver": "^2.0.5",
-    "framer-motion": "^5.5.5",
-    "puppeteer": "^23.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-phone-number-input": "^3.3.7",
-    "react-router-dom": "^6.18.0",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^9.1.3",
-    "sass": "^1.69.5",
-    "scss": "^0.2.4",
-    "web-vitals": "^2.1.4"
-  },
+  "@chakra-ui/icons": "^2.1.1",
+  "@chakra-ui/react": "^2.8.1",
+  "@emotion/react": "^11.11.1",
+  "@emotion/styled": "^11.11.0",
+  "@tabler/icons-react": "^2.40.0",
+  "@testing-library/jest-dom": "^5.17.0",
+  "@testing-library/react": "^13.4.0",
+  "@testing-library/user-event": "^14.5.1",
+  "axios": "^1.7.8",
+  "framer-motion": "^5.5.5",
+  "puppeteer": "^23.7.1",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-phone-number-input": "^3.3.7",
+  "react-router-dom": "^6.18.0",
+  "react-scripts": "^5.0.1",
+  "react-toastify": "^9.1.3",
+  "sass": "^1.69.5",
+  "scss": "^0.2.4",
+  "web-vitals": "^2.1.4",
+  "react-typical": "^0.1.3"
+},
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
@@ -35,11 +35,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-
-  "keywords": [],
-  "author": "Joseph Jeong",
-  "license": "ISC"
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "http://127.0.0.1:5000",  
   "eslintConfig": {
     "extends": "react-app"
   },
